# fastapi_layered_architecture

./: .gitignore  README.md  config.yml  pyproject.toml  run_server_local.py
.github/: pull_request_template.md
_docker/: docker.Dockerfile  prod.Dockerfile
_env/: dev.env  stag.env
migrations/: env.py  env_utils.py
src/core/application/dtos/: base_config.py  base_request.py  user_dto.py
src/core/application/messaging/: rabbitmq_publisher.py
src/core/application/responses/: base_response.py  user_response.py
src/core/application/services/: base_service.py
src/core/application/use_cases/: base_use_case.py
src/core/applications/dtos/: user_dto.py
src/core/applications/responses/: base.py  pagination_response.py  user_response.py
src/core/applications/use_cases/: base_use_case.py
src/core/domain/entities/: user_entity.py
src/core/domain/services/: base_service.py
src/core/exceptions/: base_exception.py
src/core/infrastructure/database/: database.py
src/core/infrastructure/di/: container.py  core_container.py
src/core/infrastructure/messaging/: rabbitmq_manager.py
src/core/infrastructure/repositories/: base_repository.py
src/core/middleware/: exception_handler.py  exception_middleware.py  response_middleware.py
src/server/: app.py
src/server/admin/views/: user_view.py
src/server/application/controllers/: user_controller.py
src/server/application/services/: user_service.py
src/server/application/use_cases/: user_use_case.py
src/server/domain/services/: user_service.py
src/server/infrastructure/bootstrap/: admin_registry.py  (+1 more)
(+10 files in other folders)
